<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D1EEFC"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="536dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/rounded_background"
        android:orientation="vertical"
        android:padding="10dp">


        <TextView
            android:layout_width="184dp"
            android:layout_height="74dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/activiti_name"
            android:textColor="#000000"
            android:textSize="45dp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="67dp"
                android:layout_height="wrap_content"
                android:text="@string/login_name"
                android:textStyle="bold" />

            <View
                android:layout_width="10dp"
                android:layout_height="match_parent" />

            <EditText
                android:id="@+id/et_usernamerg"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@drawable/edittext_border"
                android:hint="@string/username_hint"
                android:inputType="text"
                android:padding="10dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="67dp"
                android:layout_height="wrap_content"
                android:text="@string/pass_name"
                android:textStyle="bold" />

            <View
                android:layout_width="10dp"
                android:layout_height="match_parent" />

            <EditText
                android:id="@+id/et_passwordrg"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@drawable/edittext_border"
                android:hint="@string/password_hint"
                android:inputType="text"
                android:padding="10dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="67dp"
                android:layout_height="wrap_content"
                android:text="@string/repass_name"
                android:textStyle="bold" />

            <View
                android:layout_width="10dp"
                android:layout_height="match_parent" />

            <EditText
                android:id="@+id/et_repassword"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@drawable/edittext_border"
                android:hint="@string/repassword_hint"
                android:inputType="text"
                android:padding="10dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="67dp"
                android:layout_height="wrap_content"
                android:text="@string/phone_name"
                android:textStyle="bold" />

            <View
                android:layout_width="10dp"
                android:layout_height="match_parent" />

            <EditText
                android:id="@+id/et_phonenumber"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@drawable/edittext_border"
                android:hint="@string/phone_hint"
                android:inputType="text"
                android:padding="10dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="67dp"
                android:layout_height="wrap_content"
                android:text="@string/email_name"
                android:textStyle="bold" />

            <View
                android:layout_width="10dp"
                android:layout_height="match_parent" />

            <EditText
                android:id="@+id/et_email"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@drawable/edittext_border"
                android:hint="@string/email_hint"
                android:inputType="text"
                android:padding="10dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_border"
                android:text="@string/back"
                android:textStyle="bold"
                android:id="@+id/back"/>

            <View
                android:layout_width="10dp"
                android:layout_height="match_parent" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_border"
                android:text="@string/register"
                android:textStyle="bold"
                android:id="@+id/add"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>