<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D1EEFC"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="606dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/rounded_background"
        android:orientation="vertical"
        android:padding="10dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="294dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:contentDescription="@string/logo_description"
            android:padding="20dp"
            android:src="@drawable/logo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="67dp"
                android:layout_height="wrap_content"
                android:text="@string/login_name"
                android:textStyle="bold" />

            <View
                android:layout_width="10dp"
                android:layout_height="match_parent" />

            <EditText
                android:id="@+id/et_username"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@drawable/edittext_border"
                android:hint="@string/username_hint"
                android:inputType="text"
                android:padding="10dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="67dp"
                android:layout_height="wrap_content"
                android:text="@string/pass_name"
                android:textStyle="bold" />

            <View
                android:layout_width="10dp"
                android:layout_height="match_parent" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@drawable/edittext_border"
                android:hint="@string/password_hint"
                android:inputType="text"
                android:padding="10dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textColor="#0077be"
                android:textStyle="bold"
                android:id="@+id/register"/>

            <View
                android:layout_width="10dp"
                android:layout_height="match_parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:textColor="#0077be"
                android:textStyle="bold"
                android:id="@+id/forgot_password"/>

        </LinearLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_margin="30dp"
            android:background="@drawable/edittext_border"
            android:padding="10dp"
            android:text="@string/login" />

    </LinearLayout>

</LinearLayout>